# retrivis.ai-server

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  database.py  docker-compose.yml  main.py  pyproject.toml  tasks.py
evaluation/datasets/: ragas_evaluation_dataset.json  results.csv
evaluation/scripts/: raga_data_collection.py  run_evaluation.py
notebooks/: simple_agent.ipynb
routers/: chats.py  files.py  projects.py  users.py
src/: server.py
src/agents/simple_agent/: agent.py
src/agents/supervisor_agent/: agent.py
src/config/: logging.py
src/models/: index.py
src/rag/ingestion/: index.py
src/rag/retrieval/: index.py  utils.py
src/routes/: chatRoutes.py  projectFilesRoutes.py  projectRoutes.py  userRoutes.py
src/services/: celery.py  clerkAuth.py
