[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "jawahar-singamsetty",email = "srjawahar1999@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "supabase (>=2.28.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "boto3 (>=1.42.55,<2.0.0)",
    "clerk-backend-api (>=5.0.2,<6.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "celery (>=5.6.2,<6.0.0)",
    "langchain (==0.3.27)",
    "langchain-community (==0.3.27)",
    "langchain-openai (==0.3.28)",
    "unstructured[all-docs] (==0.18.11)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "python-magic-bin (>=0.4.14,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
