[tool.poetry]
name = "retrivis-ai"
version = "0.1.0"
description = ""
authors = ["srjawahar1999@gmail.com"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# CPU-only torch
torch = {version = "2.4.1+cpu", source = "torch-cpu"}
torchvision = {version = "0.19.1+cpu", source = "torch-cpu"}

fastapi = ">=0.121.2,<0.122.0"
uvicorn = ">=0.38.0,<0.39.0"
supabase = ">=2.24.0,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
clerk-backend-api = ">=4.0.0,<5.0.0"
boto3 = ">=1.40.74,<2.0.0"
celery = ">=5.5.3,<6.0.0"
langchain = "0.3.25"
langchain-community = "0.3.24"
langchain-openai = "0.3.16"
langgraph = "0.2.73"
unstructured = {version = "0.18.11", extras = ["pdf", "docx", "pptx", "html"]}
scrapingbee = "^2.0.2"
redis = "^7.0.1"
ddgs = "^9.10.0"
langchain-tavily = "^0.2.17"
guardrails-ai = "0.5.15"
structlog = "^24.4.0"
markdown = ">=3.4.0"

# ↓ DEV ONLY — not installed in Docker
[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"      # notebooks
ragas = "^0.4.3"           # evaluation
jupyter = "*"
